_extracted/PA3/PA3/cool.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | error ';'

    5 class: CLASS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    7 feature_list: ε
    8             | feature_list feature ';'
    9             | feature_list error ';'

   10 feature: OBJECTID ':' TYPEID
   11        | OBJECTID ':' TYPEID ASSIGN expression
   12        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}'
   13        | OBJECTID '(' ')' ':' TYPEID '{' expression '}'

   14 formal_list: formal
   15            | formal_list ',' formal

   16 formal: OBJECTID ':' TYPEID

   17 case_list: case
   18          | case_list case

   19 case: OBJECTID ':' TYPEID DARROW expression ';'

   20 auxiliar_let: OBJECTID ':' TYPEID IN expression
   21             | OBJECTID ':' TYPEID ASSIGN expression IN expression
   22             | OBJECTID ':' TYPEID ',' auxiliar_let
   23             | OBJECTID ':' TYPEID ASSIGN expression ',' auxiliar_let
   24             | error ',' auxiliar_let

   25 expressions_block: expression ';'
   26                  | expressions_block expression ';'
   27                  | error ';'
   28                  | expressions_block error ';'

   29 expressions_arg: expression
   30                | expressions_arg ',' expression

   31 expression: INT_CONST
   32           | BOOL_CONST
   33           | STR_CONST
   34           | OBJECTID
   35           | '~' expression
   36           | NOT expression
   37           | ISVOID expression
   38           | NEW TYPEID
   39           | expression '+' expression
   40           | expression '-' expression
   41           | expression '*' expression
   42           | expression '/' expression
   43           | expression '=' expression
   44           | expression '<' expression
   45           | expression LE expression
   46           | '(' expression ')'
   47           | '{' expressions_block '}'
   48           | OBJECTID ASSIGN expression
   49           | OBJECTID '(' expressions_arg ')'
   50           | OBJECTID '(' ')'
   51           | expression '.' OBJECTID '(' expressions_arg ')'
   52           | expression '.' OBJECTID '(' ')'
   53           | expression '@' TYPEID '.' OBJECTID '(' expressions_arg ')'
   54           | expression '@' TYPEID '.' OBJECTID '(' ')'
   55           | IF expression THEN expression ELSE expression FI
   56           | WHILE expression LOOP expression POOL
   57           | CASE expression OF case_list ESAC
   58           | LET auxiliar_let


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 12 13 46 49 50 51 52 53 54
    ')' (41) 12 13 46 49 50 51 52 53 54
    '*' (42) 41
    '+' (43) 39
    ',' (44) 15 22 23 24 30
    '-' (45) 40
    '.' (46) 51 52 53 54
    '/' (47) 42
    ':' (58) 10 11 12 13 16 19 20 21 22 23
    ';' (59) 4 5 6 8 9 19 25 26 27 28
    '<' (60) 44
    '=' (61) 43
    '@' (64) 53 54
    '{' (123) 5 6 12 13 47
    '}' (125) 5 6 12 13 47
    '~' (126) 35
    error (256) 4 9 24 27 28
    CLASS (258) 5 6
    ELSE (259) 55
    FI (260) 55
    IF (261) 55
    IN (262) 20 21
    INHERITS (263) 6
    LET (264) 58
    LOOP (265) 56
    POOL (266) 56
    THEN (267) 55
    WHILE (268) 56
    CASE (269) 57
    ESAC (270) 57
    OF (271) 57
    DARROW (272) 19
    NEW (273) 38
    ISVOID (274) 37
    STR_CONST <symbol> (275) 33
    INT_CONST <symbol> (276) 31
    BOOL_CONST <boolean> (277) 32
    TYPEID <symbol> (278) 5 6 10 11 12 13 16 19 20 21 22 23 38 53 54
    OBJECTID <symbol> (279) 10 11 12 13 16 19 20 21 22 23 34 48 49 50 51 52 53 54
    ASSIGN (280) 11 21 23 48
    NOT (281) 36
    LE (282) 45
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3 4
        on right: 1 3
    class <class_> (48)
        on left: 5 6
        on right: 2 3
    feature_list <features> (49)
        on left: 7 8 9
        on right: 5 6 8 9
    feature <feature> (50)
        on left: 10 11 12 13
        on right: 8
    formal_list <formals> (51)
        on left: 14 15
        on right: 12 15
    formal <formal> (52)
        on left: 16
        on right: 14 15
    case_list <cases> (53)
        on left: 17 18
        on right: 18 57
    case <case_> (54)
        on left: 19
        on right: 17 18
    auxiliar_let <expression> (55)
        on left: 20 21 22 23 24
        on right: 22 23 24 58
    expressions_block <expressions> (56)
        on left: 25 26 27 28
        on right: 26 28 47
    expressions_arg <expressions> (57)
        on left: 29 30
        on right: 30 49 51 53
    expression <expression> (58)
        on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58
        on right: 11 12 13 19 20 21 23 25 26 29 30 35 36 37 39 40 41 42 43 44 45 46 48 51 52 53 54 55 56 57


State 0

    0 $accept: • program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    4 class_list: error • ';'

    ';'  shift, and go to state 6


State 2

    5 class: CLASS • TYPEID '{' feature_list '}' ';'
    6      | CLASS • TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program • $end

    $end  shift, and go to state 8


State 4

    1 program: class_list •
    3 class_list: class_list • class

    CLASS  shift, and go to state 2

    $default  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class •

    $default  reduce using rule 2 (class_list)


State 6

    4 class_list: error ';' •

    $default  reduce using rule 4 (class_list)


State 7

    5 class: CLASS TYPEID • '{' feature_list '}' ';'
    6      | CLASS TYPEID • INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end •

    $default  accept


State 9

    3 class_list: class_list class •

    $default  reduce using rule 3 (class_list)


State 10

    6 class: CLASS TYPEID INHERITS • TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    5 class: CLASS TYPEID '{' • feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 13


State 12

    6 class: CLASS TYPEID INHERITS TYPEID • '{' feature_list '}' ';'

    '{'  shift, and go to state 14


State 13

    5 class: CLASS TYPEID '{' feature_list • '}' ';'
    8 feature_list: feature_list • feature ';'
    9             | feature_list • error ';'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 17

    feature  go to state 18


State 14

    6 class: CLASS TYPEID INHERITS TYPEID '{' • feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 19


State 15

    9 feature_list: feature_list error • ';'

    ';'  shift, and go to state 20


State 16

   10 feature: OBJECTID • ':' TYPEID
   11        | OBJECTID • ':' TYPEID ASSIGN expression
   12        | OBJECTID • '(' formal_list ')' ':' TYPEID '{' expression '}'
   13        | OBJECTID • '(' ')' ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 21
    '('  shift, and go to state 22


State 17

    5 class: CLASS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 23


State 18

    8 feature_list: feature_list feature • ';'

    ';'  shift, and go to state 24


State 19

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list • '}' ';'
    8 feature_list: feature_list • feature ';'
    9             | feature_list • error ';'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 25

    feature  go to state 18


State 20

    9 feature_list: feature_list error ';' •

    $default  reduce using rule 9 (feature_list)


State 21

   10 feature: OBJECTID ':' • TYPEID
   11        | OBJECTID ':' • TYPEID ASSIGN expression

    TYPEID  shift, and go to state 26


State 22

   12 feature: OBJECTID '(' • formal_list ')' ':' TYPEID '{' expression '}'
   13        | OBJECTID '(' • ')' ':' TYPEID '{' expression '}'

    OBJECTID  shift, and go to state 27
    ')'       shift, and go to state 28

    formal_list  go to state 29
    formal       go to state 30


State 23

    5 class: CLASS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 5 (class)


State 24

    8 feature_list: feature_list feature ';' •

    $default  reduce using rule 8 (feature_list)


State 25

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 31


State 26

   10 feature: OBJECTID ':' TYPEID •
   11        | OBJECTID ':' TYPEID • ASSIGN expression

    ASSIGN  shift, and go to state 32

    $default  reduce using rule 10 (feature)


State 27

   16 formal: OBJECTID • ':' TYPEID

    ':'  shift, and go to state 33


State 28

   13 feature: OBJECTID '(' ')' • ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 34


State 29

   12 feature: OBJECTID '(' formal_list • ')' ':' TYPEID '{' expression '}'
   15 formal_list: formal_list • ',' formal

    ')'  shift, and go to state 35
    ','  shift, and go to state 36


State 30

   14 formal_list: formal •

    $default  reduce using rule 14 (formal_list)


State 31

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 6 (class)


State 32

   11 feature: OBJECTID ':' TYPEID ASSIGN • expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 51


State 33

   16 formal: OBJECTID ':' • TYPEID

    TYPEID  shift, and go to state 52


State 34

   13 feature: OBJECTID '(' ')' ':' • TYPEID '{' expression '}'

    TYPEID  shift, and go to state 53


State 35

   12 feature: OBJECTID '(' formal_list ')' • ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 54


State 36

   15 formal_list: formal_list ',' • formal

    OBJECTID  shift, and go to state 27

    formal  go to state 55


State 37

   55 expression: IF • expression THEN expression ELSE expression FI

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 56


State 38

   58 expression: LET • auxiliar_let

    error     shift, and go to state 57
    OBJECTID  shift, and go to state 58

    auxiliar_let  go to state 59


State 39

   56 expression: WHILE • expression LOOP expression POOL

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 60


State 40

   57 expression: CASE • expression OF case_list ESAC

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 61


State 41

   38 expression: NEW • TYPEID

    TYPEID  shift, and go to state 62


State 42

   37 expression: ISVOID • expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 63


State 43

   33 expression: STR_CONST •

    $default  reduce using rule 33 (expression)


State 44

   31 expression: INT_CONST •

    $default  reduce using rule 31 (expression)


State 45

   32 expression: BOOL_CONST •

    $default  reduce using rule 32 (expression)


State 46

   34 expression: OBJECTID •
   48           | OBJECTID • ASSIGN expression
   49           | OBJECTID • '(' expressions_arg ')'
   50           | OBJECTID • '(' ')'

    ASSIGN  shift, and go to state 64
    '('     shift, and go to state 65

    $default  reduce using rule 34 (expression)


State 47

   36 expression: NOT • expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 66


State 48

   35 expression: '~' • expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 67


State 49

   47 expression: '{' • expressions_block '}'

    error       shift, and go to state 68
    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expressions_block  go to state 69
    expression         go to state 70


State 50

   46 expression: '(' • expression ')'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 71


State 51

   11 feature: OBJECTID ':' TYPEID ASSIGN expression •
   39 expression: expression • '+' expression
   40           | expression • '-' expression
   41           | expression • '*' expression
   42           | expression • '/' expression
   43           | expression • '=' expression
   44           | expression • '<' expression
   45           | expression • LE expression
   51           | expression • '.' OBJECTID '(' expressions_arg ')'
   52           | expression • '.' OBJECTID '(' ')'
   53           | expression • '@' TYPEID '.' OBJECTID '(' expressions_arg ')'
   54           | expression • '@' TYPEID '.' OBJECTID '(' ')'

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 11 (feature)


State 52

   16 formal: OBJECTID ':' TYPEID •

    $default  reduce using rule 16 (formal)


State 53

   13 feature: OBJECTID '(' ')' ':' TYPEID • '{' expression '}'

    '{'  shift, and go to state 81


State 54

   12 feature: OBJECTID '(' formal_list ')' ':' • TYPEID '{' expression '}'

    TYPEID  shift, and go to state 82


State 55

   15 formal_list: formal_list ',' formal •

    $default  reduce using rule 15 (formal_list)


State 56

   39 expression: expression • '+' expression
   40           | expression • '-' expression
   41           | expression • '*' expression
   42           | expression • '/' expression
   43           | expression • '=' expression
   44           | expression • '<' expression
   45           | expression • LE expression
   51           | expression • '.' OBJECTID '(' expressions_arg ')'
   52           | expression • '.' OBJECTID '(' ')'
   53           | expression • '@' TYPEID '.' OBJECTID '(' expressions_arg ')'
   54           | expression • '@' TYPEID '.' OBJECTID '(' ')'
   55           | IF expression • THEN expression ELSE expression FI

    THEN  shift, and go to state 83
    LE    shift, and go to state 72
    '<'   shift, and go to state 73
    '='   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '@'   shift, and go to state 79
    '.'   shift, and go to state 80


State 57

   24 auxiliar_let: error • ',' auxiliar_let

    ','  shift, and go to state 84


State 58

   20 auxiliar_let: OBJECTID • ':' TYPEID IN expression
   21             | OBJECTID • ':' TYPEID ASSIGN expression IN expression
   22             | OBJECTID • ':' TYPEID ',' auxiliar_let
   23             | OBJECTID • ':' TYPEID ASSIGN expression ',' auxiliar_let

    ':'  shift, and go to state 85


State 59

   58 expression: LET auxiliar_let •

    $default  reduce using rule 58 (expression)


State 60

   39 expression: expression • '+' expression
   40           | expression • '-' expression
   41           | expression • '*' expression
   42           | expression • '/' expression
   43           | expression • '=' expression
   44           | expression • '<' expression
   45           | expression • LE expression
   51           | expression • '.' OBJECTID '(' expressions_arg ')'
   52           | expression • '.' OBJECTID '(' ')'
   53           | expression • '@' TYPEID '.' OBJECTID '(' expressions_arg ')'
   54           | expression • '@' TYPEID '.' OBJECTID '(' ')'
   56           | WHILE expression • LOOP expression POOL

    LOOP  shift, and go to state 86
    LE    shift, and go to state 72
    '<'   shift, and go to state 73
    '='   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '@'   shift, and go to state 79
    '.'   shift, and go to state 80


State 61

   39 expression: expression • '+' expression
   40           | expression • '-' expression
   41           | expression • '*' expression
   42           | expression • '/' expression
   43           | expression • '=' expression
   44           | expression • '<' expression
   45           | expression • LE expression
   51           | expression • '.' OBJECTID '(' expressions_arg ')'
   52           | expression • '.' OBJECTID '(' ')'
   53           | expression • '@' TYPEID '.' OBJECTID '(' expressions_arg ')'
   54           | expression • '@' TYPEID '.' OBJECTID '(' ')'
   57           | CASE expression • OF case_list ESAC

    OF   shift, and go to state 87
    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80


State 62

   38 expression: NEW TYPEID •

    $default  reduce using rule 38 (expression)


State 63

   37 expression: ISVOID expression •
   39           | expression • '+' expression
   40           | expression • '-' expression
   41           | expression • '*' expression
   42           | expression • '/' expression
   43           | expression • '=' expression
   44           | expression • '<' expression
   45           | expression • LE expression
   51           | expression • '.' OBJECTID '(' expressions_arg ')'
   52           | expression • '.' OBJECTID '(' ')'
   53           | expression • '@' TYPEID '.' OBJECTID '(' expressions_arg ')'
   54           | expression • '@' TYPEID '.' OBJECTID '(' ')'

    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 37 (expression)


State 64

   48 expression: OBJECTID ASSIGN • expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 88


State 65

   49 expression: OBJECTID '(' • expressions_arg ')'
   50           | OBJECTID '(' • ')'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50
    ')'         shift, and go to state 89

    expressions_arg  go to state 90
    expression       go to state 91


State 66

   36 expression: NOT expression •
   39           | expression • '+' expression
   40           | expression • '-' expression
   41           | expression • '*' expression
   42           | expression • '/' expression
   43           | expression • '=' expression
   44           | expression • '<' expression
   45           | expression • LE expression
   51           | expression • '.' OBJECTID '(' expressions_arg ')'
   52           | expression • '.' OBJECTID '(' ')'
   53           | expression • '@' TYPEID '.' OBJECTID '(' expressions_arg ')'
   54           | expression • '@' TYPEID '.' OBJECTID '(' ')'

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 36 (expression)


State 67

   35 expression: '~' expression •
   39           | expression • '+' expression
   40           | expression • '-' expression
   41           | expression • '*' expression
   42           | expression • '/' expression
   43           | expression • '=' expression
   44           | expression • '<' expression
   45           | expression • LE expression
   51           | expression • '.' OBJECTID '(' expressions_arg ')'
   52           | expression • '.' OBJECTID '(' ')'
   53           | expression • '@' TYPEID '.' OBJECTID '(' expressions_arg ')'
   54           | expression • '@' TYPEID '.' OBJECTID '(' ')'

    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 35 (expression)


State 68

   27 expressions_block: error • ';'

    ';'  shift, and go to state 92


State 69

   26 expressions_block: expressions_block • expression ';'
   28                  | expressions_block • error ';'
   47 expression: '{' expressions_block • '}'

    error       shift, and go to state 93
    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '}'         shift, and go to state 94
    '('         shift, and go to state 50

    expression  go to state 95

